--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<title>Shopping Cart - Frontend</title>
+	<link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+	<header class="main">
+		<div class="container">
+			<a href="index.html" class="logo">
+				Shop Name
+			</a>
+			<nav>
+				<a href="#">Page 1</a>
+				<a href="#">Page 2</a>
+				<a href="#">Page 3</a>
+				<a href="#">Page 4</a>
+				<a href="#">Page 5</a>
+			</nav>
+		</div>
+	</header>
+	<section class="content">
+		<div class="container">
+			<aside>
+				
+			</aside>
+			<main>
+				<ul class="items">
+					<li>
+						<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
+					</li>
+					<li>
+						<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
+					</li>
+					<li>
+						<img src="img/shoes/11kzesJnoBY.jpg" alt="">
+					</li>
+					<li>
+						<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
+					</li>
+					<li>
+						<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
+					</li>
+					<li>
+						<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
+					</li>
+					<li>
+						<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
+					</li>
+						<li>
+						<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
+					</li>
+						<li>
+						<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
+					</li>
+				</ul>
+			</main>
+		</div>
+	</section>
+	<footer class="main">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h4>Footer Headline</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+				</div>
+				<div class="col">
+					<h4>Footer Headline</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+				</div>
+				<div class="col">
+					<h4>Footer Headline</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+				</div>
+			</div>
+		</div>
+	</footer>
+</body>
+</html>
