--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<title>Shopping Cart - Frontend</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<header class="main">
 		<div class="container">
-			<a href="index.html" class="logo">
-				Shop Name
-			</a>
+			<div class="top">
+				<a href="index.html" class="logo">
+					Swapify
+				</a>
+				<a href="" class="cart">
+					Cart
+				</a>
+			</div>
 			<nav>
-				<a href="#">Page 1</a>
-				<a href="#">Page 2</a>
-				<a href="#">Page 3</a>
-				<a href="#">Page 4</a>
+				<a href="#">Clothing</a>
+				<a href="#">Premium</a>
+				<a href="#">Designer</a>
+				<a href="#">Juniors</a>
 				<a href="#">Page 5</a>
 			</nav>
 		</div>
@@ -25,7 +31,8 @@
 	<section class="content">
 		<div class="container">
 			<aside>
-				
+				<h3>Headline</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptates, illo, tempora mollitia officiis provident id quis pariatur alias iure? Vel modi ratione vitae qui in, repellendus beatae alias ipsum.</p>
 			</aside>
 			<main>
 				<ul class="items">
