--- a/index.html
+++ b/index.html
@@ -1,89 +1,106 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="UTF-8">
-	<title>Shopping Cart - Frontend</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/styles.css">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<title>Shopping Cart - Frontend</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<header class="main">
-		<div class="container">
-			<div class="top">
-				<a href="index.html" class="logo">
-					Swapify
-				</a>
-				<a href="" class="cart">
-					Cart
-				</a>
-			</div>
-			<nav>
-				<a href="#">Clothing</a>
-				<a href="#">Premium</a>
-				<a href="#">Designer</a>
-				<a href="#">Juniors</a>
-				<a href="#">Page 5</a>
-			</nav>
+<header class="main">
+	<div class="container">
+		<div class="top">
+			<a href="index.html" class="logo">
+				Swapify
+			</a>
+			<a href="" class="cart">
+				<img src="img/shopping-bag.svg" alt="">
+				<span class="text">Shopping Cart</span>
+			</a>
 		</div>
-	</header>
-	<section class="content">
+	</div>
+	<div class="nav-bar">
 		<div class="container">
-			<aside>
-				<h3>Headline</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptates, illo, tempora mollitia officiis provident id quis pariatur alias iure? Vel modi ratione vitae qui in, repellendus beatae alias ipsum.</p>
-			</aside>
-			<main>
-				<ul class="items">
+			<nav>
+				<ul>
 					<li>
-						<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
+						<a href="#">Clothing</a>
 					</li>
 					<li>
-						<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
+						<a href="#">Premium</a>
 					</li>
 					<li>
-						<img src="img/shoes/11kzesJnoBY.jpg" alt="">
+						<a href="#">Designer</a>
 					</li>
 					<li>
-						<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
+						<a href="#">Juniors</a>
 					</li>
 					<li>
-						<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
-					</li>
-					<li>
-						<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
-					</li>
-					<li>
-						<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
-					</li>
-						<li>
-						<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
-					</li>
-						<li>
-						<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
+						<a href="#">Shoes</a>
 					</li>
 				</ul>
-			</main>
+			</nav>
 		</div>
-	</section>
-	<footer class="main">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<h4>Footer Headline</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
-				</div>
-				<div class="col">
-					<h4>Footer Headline</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
-				</div>
-				<div class="col">
-					<h4>Footer Headline</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
-				</div>
+	</div>
+</header>
+<section class="content">
+	<div class="container">
+		<aside>
+			<h3>Headline</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptates, illo, tempora mollitia officiis provident id quis pariatur alias iure? Vel modi ratione vitae qui in, repellendus beatae alias ipsum.</p>
+		</aside>
+		<main>
+			<ul class="items">
+				<li>
+					<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/shoes/11kzesJnoBY.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
+				</li>
+					<li>
+					<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
+				</li>
+					<li>
+					<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
+				</li>
+			</ul>
+		</main>
+	</div>
+</section>
+<footer class="main">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<h4>Footer Headline</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+			</div>
+			<div class="col">
+				<h4>Footer Headline</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+			</div>
+			<div class="col">
+				<h4>Footer Headline</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
 			</div>
 		</div>
-	</footer>
+	</div>
+</footer>
 </body>
 </html>
