--- a/index.html
+++ b/index.html
@@ -48,37 +48,73 @@
 <section class="content">
 	<div class="container">
 		<aside>
-			<h3>Headline</h3>
+			<h3>Collections</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptates, illo, tempora mollitia officiis provident id quis pariatur alias iure? Vel modi ratione vitae qui in, repellendus beatae alias ipsum.</p>
 		</aside>
 		<main>
 			<ul class="items">
 				<li>
 					<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 				<li>
 					<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 				<li>
 					<img src="img/shoes/11kzesJnoBY.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 				<li>
 					<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 				<li>
 					<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 				<li>
 					<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 				<li>
 					<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 					<li>
 					<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 					<li>
 					<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
+					<div class="details">
+						<h4>Product Name</h4>
+						<div class="price">€79.99</div>
+					</div>
 				</li>
 			</ul>
 		</main>
