--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 					<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
@@ -64,6 +65,7 @@
 					<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
@@ -71,6 +73,7 @@
 					<img src="img/shoes/11kzesJnoBY.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
@@ -78,6 +81,7 @@
 					<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
@@ -85,6 +89,7 @@
 					<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
@@ -92,6 +97,7 @@
 					<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
@@ -99,6 +105,7 @@
 					<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
@@ -106,6 +113,7 @@
 					<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
@@ -113,6 +121,7 @@
 					<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
 					<div class="details">
 						<h4>Product Name</h4>
+						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
