--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 		<main>
 			<ul class="items">
 				<li>
-					<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
+					<div class="image">
+						<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
@@ -62,7 +65,10 @@
 					</div>
 				</li>
 				<li>
-					<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
+					<div class="image">
+						<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
@@ -70,7 +76,10 @@
 					</div>
 				</li>
 				<li>
-					<img src="img/shoes/11kzesJnoBY.jpg" alt="">
+					<div class="image">
+						<img src="img/shoes/11kzesJnoBY.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
@@ -78,7 +87,10 @@
 					</div>
 				</li>
 				<li>
-					<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
+					<div class="image">
+						<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
@@ -86,7 +98,10 @@
 					</div>
 				</li>
 				<li>
-					<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
+					<div class="image">
+						<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
@@ -94,7 +109,10 @@
 					</div>
 				</li>
 				<li>
-					<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
+					<div class="image">
+						<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
@@ -102,23 +120,32 @@
 					</div>
 				</li>
 				<li>
-					<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
+					<div class="image">
+						<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
-					<li>
-					<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
+				<li>
+					<div class="image">
+						<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
 						<div class="price">€79.99</div>
 					</div>
 				</li>
-					<li>
-					<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
+				<li>
+					<div class="image">
+						<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
+						<button>Add to cart</button>
+					</div>
 					<div class="details">
 						<h4>Product Name</h4>
 						<h5>Sneaker</h5>
