--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<div class="top">
 			<a href="index.html" class="logo">
-				Swapify
+				Shopping Cart
 			</a>
 			<a href="" class="cart">
 				<img src="img/shopping-bag.svg" alt="">
