--- a/index.html
+++ b/index.html
@@ -1,178 +1,213 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="UTF-8">
-<title>Shopping Cart - Frontend</title>
-<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/styles.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<title>Shopping Cart - Frontend</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<header class="main">
-	<div class="container">
-		<div class="top">
-			<a href="index.html" class="logo">
-				Shopping Cart
-			</a>
-			<a href="" class="cart">
-				<img src="img/shopping-bag.svg" alt="">
-				<span class="text">Shopping Cart</span>
-			</a>
-		</div>
-	</div>
-	<div class="nav-bar">
+	<header class="main">
 		<div class="container">
-			<nav>
-				<ul>
+			<div class="top">
+				<a href="index.html" class="logo">
+					Shopping Cart
+				</a>
+				<a href="#" class="cart">
+					<img src="img/shopping-bag.svg" alt="">
+					<span class="text">Shopping Cart</span>
+				</a>
+			</div>
+		</div>
+		<div class="nav-bar">
+			<div class="container">
+				<nav>
+					<ul>
+						<li>
+							<a href="#">Clothing</a>
+						</li>
+						<li>
+							<a href="#">Premium</a>
+						</li>
+						<li>
+							<a href="#">Designer</a>
+						</li>
+						<li>
+							<a href="#">Juniors</a>
+						</li>
+						<li>
+							<a href="#">Shoes</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+	<section class="content">
+		<div class="container">
+			<aside>
+				<h3>Collections</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptates, illo, tempora mollitia officiis provident id quis pariatur alias iure? Vel modi ratione vitae qui in, repellendus beatae alias ipsum.</p>
+			</aside>
+			<main>
+				<ul class="items">
 					<li>
-						<a href="#">Clothing</a>
+						<div class="image">
+							<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
 					</li>
 					<li>
-						<a href="#">Premium</a>
+						<div class="image">
+							<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
 					</li>
 					<li>
-						<a href="#">Designer</a>
+						<div class="image">
+							<img src="img/shoes/11kzesJnoBY.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
 					</li>
 					<li>
-						<a href="#">Juniors</a>
+						<div class="image">
+							<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
 					</li>
 					<li>
-						<a href="#">Shoes</a>
+						<div class="image">
+							<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
+					</li>
+					<li>
+						<div class="image">
+							<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
+					</li>
+					<li>
+						<div class="image">
+							<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
+					</li>
+					<li>
+						<div class="image">
+							<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
+					</li>
+					<li>
+						<div class="image">
+							<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
+							<button>Add to cart</button>
+						</div>
+						<div class="details">
+							<h4>Product Name</h4>
+							<h5>Sneaker</h5>
+							<div class="price">€79.99</div>
+						</div>
 					</li>
 				</ul>
-			</nav>
+			</main>
 		</div>
-	</div>
-</header>
-<section class="content">
-	<div class="container">
-		<aside>
-			<h3>Collections</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptates, illo, tempora mollitia officiis provident id quis pariatur alias iure? Vel modi ratione vitae qui in, repellendus beatae alias ipsum.</p>
-		</aside>
-		<main>
-			<ul class="items">
-				<li>
-					<div class="image">
-						<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="img/shoes/11kzesJnoBY.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="img/shoes/1kOIl9vu4cY.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="img/shoes/3bd0Z5l1hS8.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="img/shoes/3JCykI6YHRE.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="img/shoes/3nlAV43iEw0.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="img/shoes/3TYIkMfQfng.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="img/shoes/3vAdYH9FfG0.jpg" alt="">
-						<button>Add to cart</button>
-					</div>
-					<div class="details">
-						<h4>Product Name</h4>
-						<h5>Sneaker</h5>
-						<div class="price">€79.99</div>
-					</div>
-				</li>
-			</ul>
-		</main>
-	</div>
-</section>
-<footer class="main">
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<h4>Footer Headline</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
-			</div>
-			<div class="col">
-				<h4>Footer Headline</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
-			</div>
-			<div class="col">
-				<h4>Footer Headline</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+	</section>
+	<footer class="main">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h4>Footer Headline</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+				</div>
+				<div class="col">
+					<h4>Footer Headline</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+				</div>
+				<div class="col">
+					<h4>Footer Headline</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsa excepturi officiis facere aperiam nobis optio deserunt dolor, eum, voluptatem illo est at vero incidunt atque fugit labore nulla explicabo!</p>
+				</div>
 			</div>
 		</div>
-	</div>
-</footer>
+	</footer>
+	<section class="cart">
+		<span class="close">
+			close cart
+		</span>
+		<ul class="items">
+			<li>
+				<div class="image">
+					<img src="img/shoes/0q_tROKZ9ek.jpg" alt="">
+				</div>
+				<div class="details">
+					<h4>Product Name</h4>
+					<h5>Sneaker</h5>
+					<div class="price">€79.99</div>
+				</div>
+			</li>
+			<li>
+				<div class="image">
+					<img src="img/shoes/0R489ZeSZqg.jpg" alt="">
+				</div>
+				<div class="details">
+					<h4>Product Name</h4>
+					<h5>Sneaker</h5>
+					<div class="price">€79.99</div>
+				</div>
+			</li>
+		</ul>
+	</section>
+	<script>
+		document.querySelector('a.cart').onclick = function() {
+			document.querySelector('body').classList.toggle('cart-show');
+		}
+		document.querySelector('.cart .close').onclick = function() {
+			document.querySelector('body').classList.toggle('cart-show');
+		}
+	</script>
 </body>
 </html>
