--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 	</footer>
 	<section class="cart">
 		<span class="close">
-			close cart
+			close
 		</span>
 		<ul class="items">
 			<li>
@@ -209,6 +209,10 @@
 				</div>
 			</li>
 		</ul>
+		<div class="total">
+			Total: $410
+		</div>
+		<button>Checkout</button>
 	</section>
 	<script>
 		document.querySelector('header.main .cart').onclick = function() {
