--- a/index.html
+++ b/index.html
@@ -53,99 +53,99 @@
 						<ul class="items">
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/jomszuqr8gw3h18xhpro/air-force-1-07-mens-shoe-JkTGzADv.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/1kOIl9vu4cY.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Nike Air Force 1 '07</h4>
+									<h4>Retro Sneaker 1 '07</h4>
 									<h5>Men's Shoe</h5>
 									<div class="price">$90</div>
 								</div>
 							</li>
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/n87c9iafnghdqiaxpbt5/air-jordan-6-retro-shoe-mgDVSQ.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/8LSldR-A_vw.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Air Jordan 6 Retro</h4>
+									<h4>Zoom SuperFly</h4>
 									<h5>Shoe</h5>
 									<div class="price">$200</div>
 								</div>
 							</li>
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/5870774f-c7b7-49b7-b374-89735455f6a9/air-zoom-superrep-mens-hiit-class-shoe-ZWLnJW.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/cg-wn0uNB-0.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Nike Air Zoom SuperRep</h4>
+									<h4>Pegasus Edition 6</h4>
 									<h5>Men's HIIT Class Shoe</h5>
 									<div class="price">$120</div>
 								</div>
 							</li>
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/dc947063-b15b-4de5-8523-1bf1a1018076/zoom-pegasus-turbo-2-mens-running-shoe-K4Rhk1.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/Fn27DQw5EVw.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Nike Zoom Pegasus Turbo 2</h4>
+									<h4>Zoom SuperFly</h4>
 									<h5>Men's Running Shoe</h5>
 									<div class="price">$180</div>
 								</div>
 							</li>
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/57f7d7da-a04c-4de3-a324-49f96dc33cff/air-zoom-pegasus-36-mens-running-shoe-RgrHnf.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/z6mR2zfPo4A.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Nike Air Zoom Pegasus 36</h4>
+									<h4>Pegasus Edition 6</h4>
 									<h5>Men's Running Shoe</h5>
 									<div class="price">$120</div>
 								</div>
 							</li>
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/ee9c2c3f-2ff1-4f29-9f96-533bb573a36d/zoomx-vaporfly-next-running-shoe-xFwzvH.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/HDDQNC1vQYM.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Nike ZoomX Vaporfly NEXT%</h4>
+									<h4>Retro Sneaker 1 '07</h4>
 									<h5>Running Shoe</h5>
 									<div class="price">$250</div>
 								</div>
 							</li>
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/z6it7bhr5tfj76rfccwx/air-jordan-1-mid-shoe-1zMCFJ.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/HkrlX7uDBlM.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Air Jordan 1 Mid</h4>
+									<h4>Pegasus Edition 6</h4>
 									<h5>Shoe</h5>
 									<div class="price">$110</div>
 								</div>
 							</li>
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/p01syaq3erbksro7dfup/air-jordan-4-retro-wntr-shoe-9L34P1.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/W258KmTboQU.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Air Jordan 4 Retro WNTR</h4>
+									<h4>Retro Sneaker 1 '07</h4>
 									<h5>Shoe</h5>
 									<div class="price">$200</div>
 								</div>
 							</li>
 							<li>
 								<div class="image">
-									<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/719f2dc9-7b11-4576-84ed-4dc0bbb7f03e/kyrie-6-basketball-shoe-KQmCXH.jpg" alt="">
-									<button>Add to cart</button>
+									<img src="img/sneaker/Ix3ZA_A9YE0.jpg" alt="">
+									<button>Add to Cart</button>
 								</div>
 								<div class="details">
-									<h4>Kyrie 6</h4>
+									<h4>Zoom SuperFly</h4>
 									<h5>Basketball Shoe</h5>
 									<div class="price">$130</div>
 								</div>
@@ -174,36 +174,37 @@
 			</div>
 		</footer>
 		<section class="cart">
-			<span class="close">
-				close
-			</span>
+			<a href="#" class="close">close</a>
 			<ul class="items">
 				<li>
 					<div class="image">
-						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/jomszuqr8gw3h18xhpro/air-force-1-07-mens-shoe-JkTGzADv.jpg" alt="">
+						<img src="img/sneaker/1kOIl9vu4cY.jpg" alt="">
+						<a href="#">remove</a>
 					</div>
 					<div class="details">
-						<h4>Nike Air Force 1 '07</h4>
+						<h4>Retro Sneaker 1 '07</h4>
 						<h5>Men's Shoe</h5>
 						<div class="price">$90</div>
 					</div>
 				</li>
 				<li>
 					<div class="image">
-						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/n87c9iafnghdqiaxpbt5/air-jordan-6-retro-shoe-mgDVSQ.jpg" alt="">
+						<img src="img/sneaker/8LSldR-A_vw.jpg" alt="">
+						<a href="#">remove</a>
 					</div>
 					<div class="details">
-						<h4>Air Jordan 6 Retro</h4>
+						<h4>Zoom SuperFly</h4>
 						<h5>Shoe</h5>
 						<div class="price">$200</div>
 					</div>
 				</li>
 				<li>
 					<div class="image">
-						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/5870774f-c7b7-49b7-b374-89735455f6a9/air-zoom-superrep-mens-hiit-class-shoe-ZWLnJW.jpg" alt="">
+						<img src="img/sneaker/cg-wn0uNB-0.jpg" alt="">
+						<a href="#">remove</a>
 					</div>
 					<div class="details">
-						<h4>Nike Air Zoom SuperRep</h4>
+						<h4>Pegasus Edition 6</h4>
 						<h5>Men's HIIT Class Shoe</h5>
 						<div class="price">$120</div>
 					</div>
