--- a/index.html
+++ b/index.html
@@ -13,24 +13,32 @@
 			<div class="container">
 				<div class="top">
 					<a href="index.html" class="logo">
-						Shopping Cart
+						<span class="icon">
+							<img src="img/sneaker.svg" alt="">
+						</span>
+						<span class="text">
+							Sneakers
+						</span>
 					</a>
 					<nav>
 						<ul>
 							<li>
-								<a href="#">Clothing</a>
+								<a href="#">NEW RELEASES</a>
 							</li>
 							<li>
-								<a href="#">Premium</a>
+								<a href="#">MEN</a>
 							</li>
 							<li>
-								<a href="#">Designer</a>
+								<a href="#">WOMEN</a>
 							</li>
 							<li>
-								<a href="#">Juniors</a>
+								<a href="#">KIDS</a>
 							</li>
 							<li>
-								<a href="#">Shoes</a>
+								<a href="#">CUSTOMISE</a>
+							</li>
+							<li>
+								<a href="#">COLLECTIONS</a>
 							</li>
 						</ul>
 					</nav>
@@ -41,6 +49,9 @@
 				</div>
 			</div>
 		</header>
+		<section class="emotion">
+			<img src="img/header/ibBB_YBdEwE.jpg" alt="">
+		</section>
 		<section class="content">
 			<div class="container">
 				<h2>Men's Shoes & Sneakers</h2>
