--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,6 @@
 				</a>
 			</div>
 		</header>
-		<section class="emotion" style="background-image: url();"></section>
+		<section class="emotion" style="background-image: url(https://images.unsplash.com/photo-1570037276380-c3c19487a76d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2134&q=80);"></section>
 	</body>
 </html>
