--- a/html/index.html
+++ b/html/index.html
@@ -27,8 +27,11 @@
 					<img src="img/cart.svg" alt="Cart">
 					<span class="text">Cart</span>
 				</a>
+				<div class="menu-toggle">
+					<img src="img/menu.svg" alt="Menu">
+				</div>
 			</div>
 		</header>
-		<section class="emotion" style="background-image: url(https://images.unsplash.com/photo-1570037276380-c3c19487a76d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2134&q=80);"></section>
+		<section class="emotion" style="background-image: url(https://images.unsplash.com/photo-1577208288347-b24488f3efa5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80);"></section>
 	</body>
 </html>
