--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 				<a href="index.html" class="logo">
 					<img src="img/logo.svg" alt="Logo">
 				</a>
-				<nav>
+				<nav id="nav-main">
 					<ul>
 						<li><a href="">Home</a></li>
 						<li><a href="">Clothing</a></li>
