--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
 				</div>
 			</div>
 		</header>
+		<div class="close-side"></div>
 		<section class="emotion" style="background-image: url(https://images.unsplash.com/photo-1577208288347-b24488f3efa5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80);"></section>
 	<script src="js/main.js"></script>
 	</body>
