--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,9 @@
 			</div>
 		</header>
 		<div class="close-side"></div>
-		<section class="emotion" style="background-image: url(https://images.unsplash.com/photo-1577208288347-b24488f3efa5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80);"></section>
+		<section class="emotion">
+			<img src="https://www.snipes.com/on/demandware.static/-/Library-Sites-snse-global/default/dw84283b3c/images/Marketing_Actions/2020/20_01_20percentoff_apparel_accessoires/SD-A-CH/Sale-Online-Set_20Extra_DE_1_2772x1000.jpg" alt="">
+		</section>
 	<script src="js/main.js"></script>
 	</body>
 </html>
