--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
 		</header>
 		<div class="close-side"></div>
 		<section class="emotion">
-			<img src="https://www.snipes.com/on/demandware.static/-/Library-Sites-snse-global/default/dw84283b3c/images/Marketing_Actions/2020/20_01_20percentoff_apparel_accessoires/SD-A-CH/Sale-Online-Set_20Extra_DE_1_2772x1000.jpg" alt="">
+			<img src="img/header.jpg" alt="Header">
 		</section>
 	<script src="js/main.js"></script>
 	</body>
