--- a/html/index.html
+++ b/html/index.html
@@ -34,8 +34,22 @@
 		</header>
 		<div class="close-side"></div>
 		<section class="emotion">
-			<img src="img/header.jpg" alt="Header">
+			<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_01_x1024.jpg?v=1562387417" alt="Header">
 		</section>
+		<div class="intro">
+			<div class="col">
+				<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_02_1024x.jpg?v=1562387567" alt="">
+			</div>
+			<div class="col">
+				<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_03_1024x.jpg?v=1562387603" alt="">
+			</div>
+			<div class="col">
+				<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_04_800x.jpg?v=1562387631" alt="">
+			</div>
+			<div class="col">
+				<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_05_800x.jpg?v=1562387661" alt="">
+			</div>
+		</div>
 	<script src="js/main.js"></script>
 	</body>
 </html>
