--- a/html/index.html
+++ b/html/index.html
@@ -38,16 +38,28 @@
 		</section>
 		<div class="intro">
 			<div class="col">
-				<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_02_1024x.jpg?v=1562387567" alt="">
+				<a href="">
+					<span class="title">Shoes</span>
+					<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_02_1024x.jpg?v=1562387567" alt="">
+				</a>
 			</div>
 			<div class="col">
-				<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_03_1024x.jpg?v=1562387603" alt="">
+				<a href="">
+					<span class="title">Women's</span>
+					<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_03_1024x.jpg?v=1562387603" alt="">
+				</a>
 			</div>
 			<div class="col">
-				<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_04_800x.jpg?v=1562387631" alt="">
+				<a href="">
+					<span class="title">Sale</span>
+					<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_04_800x.jpg?v=1562387631" alt="">
+				</a>
 			</div>
 			<div class="col">
-				<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_05_800x.jpg?v=1562387661" alt="">
+				<a href="">
+					<span class="title">Men's</span>
+					<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_05_800x.jpg?v=1562387661" alt="">
+				</a>
 			</div>
 		</div>
 	<script src="js/main.js"></script>
